Add black background to the body

--- a/rodankanehart.html
+++ b/rodankanehart.html
@@ -12,6 +12,7 @@
       height: 100%;
       font-family: sans-serif;
       overflow: hidden;
+      background: black;
     }
 
     .split-screen {
